css/main.css
/* ... */
/*tablet*/
@media (min-width: 768px) {
    .container {
        display: flex;
        flex-direction: row;
        min-height: 2000px;
        width: 100%;
    }
    
    .navbar {
        flex-direction: column;
        width: 10%;
        position: relative;
        justify-content: flex-start;
        align-items: center;
        z-index: 97;
        min-height: 2000px;
    }
    
    .widget-container {
        width: 80%;
        margin: 0 auto;
    }

    .alert {
        width: 95%;
        margin-left: 20px;
    }
    
    .icons {
        width: 30px;
        height: 30px;
    }
    
    #dashboard-icon {
        margin-top: 20px;
    }
    
    .main-content {
        padding-top: 50px;
    }
    
    .user-pic {
        display: inline-block;
        border-radius: 100%;
        width: 30px;
        height: 30px;
        margin-left: 5px;
    }
    
    .user, .pipe {
        padding-left: 10px;
        font-weight: lighter;
    }
    
    .pipe {
        font-size: 2em;
        margin-bottom: 5px;
    }
    
    .search-box {
       height: 55px;
       width: 80%;
    }
    
    #search {
       width: 40%;
       margin-left: 305px;
       margin-top: 16px;
    }
    
    .member {
        align-items: center;
    }
    
    .member-date,
    .member-email {
        font-size: .9em;
    }
    
    .member:last-child {
        padding-bottom: 0;
    }
    
    #mobile-users-widget,
    #traffic-widget,
    #social-stats,
    #message-container,
    #settings {
        padding-bottom: 20px;
    }
    
    /*traffic chart toggle buttons*/
    
    .button-group {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }
    
    #chart-buttons {
        display: block;
    }
    
    #chart-buttons a {
        margin: 40px 0;
        padding: 5px 15px;
        text-decoration: none;
        color: #a59797;
        display: inline-block;
        font-weight: bold;
        font-size: .8em;
        border-radius: 15px;
        cursor: pointer;
    }
    
    #chart-buttons .active {
        background-color: #80c98f;
        color: white;
    } 
    
    #dialog-sent,
    #dialog-no-sent  {
        left: 265px;
    }  
    
}


/*desktops*/
@media (min-width: 1024px) {

    .navbar {
        width: 7.5%;
    }
    
    #search {
        margin-left: 420px;
    }
    
    .box {
        padding-left: 30px;
        padding-top: 10px;
    }
    
    .alert {
        width: 98%;
        margin-left: 8px;
    }
    
    .icon-notify {
        width: 25px;
        height: 25px;
    }
    
    #notifier {
        width: 10px;
        height: 10px;
        top: 16px;
    }
    
    .widget-name {
        text-align: left;
    }
    
    .activity-icon {
        display: inline-block;
        width: 35px;
        height: 35px;
        padding-left: 10px;
    }

   .graphs-container {
       display: flex;
       flex-direction: row;
       flex-wrap:  nowrap;
       justify-content: space-between;
       align-content: center;
       width: 100%;
   }
   
   .widget-container {
       width: 95%;
       padding-bottom: 25px;
   }
   
   .graphs-container .widget-container {
       align-items: stretch;
   }
    
    .widget-border {
        border-left: 1px solid #eee;
    }
    
    #social-stats {
        border-bottom: 1px solid #eee;
        margin: 0;
        width: 100%;
    }
   
   #daily-traffic-widget,
   #member-activity-container,
   #settings {
       margin-left: 30px;
       margin-right: 30px;
   }
   
    #new-member-container,
    #member-activity-container {
        padding-bottom: 0;
    }
   
   #new-member-container,
   #message-container  {
       border-right: 1px solid #eee;
       margin-left: 30px;
       padding-right: 30px;
   }
   
   .flex-social-container {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
       justify-content: space-around;
   }
   
   .social-container {
       margin-left: 30px;
       margin-right: 30px;
   }
   
   select {
       margin-top: 25px;
       margin-bottom: 30px;
   }
   
   .dropdown {
       padding: 10px;
   }
   
   #settings .flex-container {
       margin-top: 25px;
   }
   
   .flex-container p {
       font-size: .9em;
   }
   
   #mobile-users-container .widget-name,
   #daily-traffic-widget-container .widget-name,
   #social-stats .widget-name {
       padding-left: 30px;
   }
   
   .save-button:hover,
   .send-button:hover {
       background-color: #7cbea1;
   }
   
   .cancel-button:hover {
       background-color: #5b5757;
   }
   
   #dialog-sent,
   #dialog-no-sent  {
       left: 385px;
   }  
   
}

@media (min-width: 1200px) {
    
    #search {
        margin-left: 500px;
    }
    
    #notifier {
        width: 10px;
        height: 10px;
    }
    
    #dialog-sent,
    #dialog-no-sent  {
        left: 485px;
    }

}

@media (min-width: 1440px) {
    
    #search {
        margin-left: 600px;
    }
    
    #notifier {
        width: 10px;
        height: 10px;
    }
    
    .dropdown {
        background-size: 4%;
    }
    
    #dialog-sent,
    #dialog-no-sent  {
        left: 615px;
    }

}

